--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "md5": "^2.2.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.23",
     "uuid": "^8.2.0"
+  },
+  "engines": {
+    "node": "12.18.1"
   }
 }
